{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 104,
  "lineage": "5184ac71-41a8-5592-c5d9-224e6b1c53e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:385141744135:loadbalancer/app/alb/fa4a0257b6f14b11",
            "arn_suffix": "app/alb/fa4a0257b6f14b11",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-444630312.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:385141744135:loadbalancer/app/alb/fa4a0257b6f14b11",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-022fa5525c2814d82"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a8a4f10995c9c0d"
              },
              {
                "subnet_id": "subnet-0de17ef36a00c1c8b"
              }
            ],
            "subnets": [
              "subnet-02a8a4f10995c9c0d",
              "subnet-0de17ef36a00c1c8b"
            ],
            "vpc_id": "vpc-09ffdfa2a15cfe101",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public__a",
            "aws_subnet.public__b",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:385141744135:listener/app/alb/fa4a0257b6f14b11/b8bda40a43ce9798",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:385141744135:targetgroup/alb-target-group/c8b98e9ef80436c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:385141744135:listener/app/alb/fa4a0257b6f14b11/b8bda40a43ce9798",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:385141744135:loadbalancer/app/alb/fa4a0257b6f14b11",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.default",
            "aws_alb_target_group.default",
            "aws_security_group.alb",
            "aws_subnet.public__a",
            "aws_subnet.public__b",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:385141744135:targetgroup/alb-target-group/c8b98e9ef80436c3",
            "arn_suffix": "targetgroup/alb-target-group/c8b98e9ef80436c3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:385141744135:targetgroup/alb-target-group/c8b98e9ef80436c3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ffdfa2a15cfe101"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:385141744135:internet-gateway/igw-07438cea9599af02c",
            "id": "igw-07438cea9599af02c",
            "owner_id": "385141744135",
            "tags": {
              "Env": "production",
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Env": "production",
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-09ffdfa2a15cfe101"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c58d9a1b4296a500",
            "original_route_table_id": "rtb-0f1762d193b9527fb",
            "route_table_id": "rtb-0b1fb292814bdfd77",
            "vpc_id": "vpc-09ffdfa2a15cfe101"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:385141744135:route-table/rtb-0b1fb292814bdfd77",
            "id": "rtb-0b1fb292814bdfd77",
            "owner_id": "385141744135",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07438cea9599af02c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "production",
              "Name": "route-table-public"
            },
            "tags_all": {
              "Env": "production",
              "Name": "route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ffdfa2a15cfe101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public__a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0291e106fd777970f",
            "route_table_id": "rtb-0b1fb292814bdfd77",
            "subnet_id": "subnet-02a8a4f10995c9c0d"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public__a",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public__b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c3ab14141a407ef",
            "route_table_id": "rtb-0b1fb292814bdfd77",
            "subnet_id": "subnet-0de17ef36a00c1c8b"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public__b",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:385141744135:security-group/sg-022fa5525c2814d82",
            "description": "security-group--alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022fa5525c2814d82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group--alb",
            "name_prefix": "",
            "owner_id": "385141744135",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "production",
              "Name": "security-group--alb"
            },
            "tags_all": {
              "Env": "production",
              "Name": "security-group--alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ffdfa2a15cfe101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:385141744135:security-group/sg-0eaa7c587b500aa97",
            "description": "security-group--ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaa7c587b500aa97",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022fa5525c2814d82"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "security-group--ec2",
            "name_prefix": "",
            "owner_id": "385141744135",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "production",
              "Name": "security-group--ec2"
            },
            "tags_all": {
              "Env": "production",
              "Name": "security-group--ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ffdfa2a15cfe101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public__a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:385141744135:subnet/subnet-02a8a4f10995c9c0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a8a4f10995c9c0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385141744135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "public-us-east-1a"
            },
            "tags_all": {
              "Env": "production",
              "Name": "public-us-east-1a"
            },
            "vpc_id": "vpc-09ffdfa2a15cfe101"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public__b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:385141744135:subnet/subnet-0de17ef36a00c1c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de17ef36a00c1c8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385141744135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "public-us-east-1b"
            },
            "tags_all": {
              "Env": "production",
              "Name": "public-us-east-1b"
            },
            "vpc_id": "vpc-09ffdfa2a15cfe101"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:385141744135:vpc/vpc-09ffdfa2a15cfe101",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e4e36df62d3e66a4",
            "default_route_table_id": "rtb-0f1762d193b9527fb",
            "default_security_group_id": "sg-030df470fba81fc0e",
            "dhcp_options_id": "dopt-079ead464b21f4f08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ffdfa2a15cfe101",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1762d193b9527fb",
            "owner_id": "385141744135",
            "tags": {
              "Env": "production",
              "Name": "vpc"
            },
            "tags_all": {
              "Env": "production",
              "Name": "vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}